<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MMMF</string>
    <string name="action_settings">Settings</string>
    <string name="main">Main Stage</string>
    <string name="local">Local Stage</string>

    <!--<string name="app_name">Pinned Section Demo</string>-->
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>

</resources>
