<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />


        <item
            android:id="@+id/action_fastscroll"
            android:showAsAction="never"
            android:title="@string/action_fastscroll"
            android:checkable="true"/>

        <item
            android:id="@+id/action_addpadding"
            android:showAsAction="never"
            android:title="@string/action_addpadding"
            android:checkable="true"/>

        <item
            android:id="@+id/action_showShadow"
            android:showAsAction="never"
            android:title="@string/action_showShadow"
            android:checkable="true"/>

        <item
            android:id="@+id/action_showHeaderAndFooter"
            android:showAsAction="never"
            android:title="@string/action_showHeaderAndFooter"
            android:checkable="true"/>

        <item
            android:id="@+id/action_updateDataset"
            android:showAsAction="never"
            android:title="@string/action_updateDataset"
            />

</menu>
